--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
     "require": {
         "firebase/php-jwt": "^6.10",
         "vlucas/phpdotenv": "^5.6",
-        "resend/resend-php": "^0.12.0"
+        "resend/resend-php": "*",
+        "ralouphie/getallheaders": "^3.0"
     }
 }
