--- a/TCPDF-main/composer.json
+++ b/TCPDF-main/composer.json
@@ -22,7 +22,7 @@
         }
     ],
     "require": {
-        "php": ">=5.3.0",
+        "php": "^7.4",
       "ext-mysqli": "*",
       "ext-json": "*"
     },
